Переформирование бек части

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class = org.postgresql.Driver
-hibernate.connection.url = jdbc:postgresql://localhost:5432/trainee
+hibernate.connection.url = jdbc:postgresql://localhost:5432/technews
 hibernate.username = postgres
 hibernate.password = 123321
 hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
