--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <commons-io.version>2.6</commons-io.version>
         <spring-security-version>5.1.6.RELEASE</spring-security-version>
         <spring-core.version>5.1.9.RELEASE</spring-core.version>
+        <jjwt.version>0.9.0</jjwt.version>
     </properties>
 
     <parent>
@@ -176,6 +177,18 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
+
+        <!-- For Java 8 Date/Time Support -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
         <dependency>
