--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.25.2",
     "axios": "^0.19.0",
     "html-react-parser": "^0.10.0",
     "react": "^16.11.0",
