--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -6,6 +6,8 @@
     "antd": "^3.25.2",
     "axios": "^0.19.0",
     "html-react-parser": "^0.10.0",
+    "jwt-decode": "^2.2.0",
+    "popper.js": "^1.16.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
