--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -10,6 +10,7 @@
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-notifications": "^1.4.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
