--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/pickers": "^3.2.8",
     "antd": "^3.25.2",
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.5",
     "html-react-parser": "^0.10.0",
     "jwt-decode": "^2.2.0",
     "popper.js": "^1.16.0",
