--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -3,22 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^1.3.11",
+    "@date-io/date-fns": "latest",
     "@material-ui/core": "^4.7.0",
     "@material-ui/pickers": "^3.2.8",
     "antd": "^3.25.2",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "date-fns": "^2.0.0-beta.5",
     "html-react-parser": "^0.10.0",
     "jwt-decode": "^2.2.0",
+    "moment": "latest",
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-notifications": "^1.4.3",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
@@ -42,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-datepicker": "^2.10.1"
   }
 }
