--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "latest",
     "@material-ui/core": "^4.7.0",
     "@material-ui/pickers": "^3.2.8",
+    "@tinymce/tinymce-react": "^3.3.2",
     "antd": "^3.25.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
