--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "latest",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.7.0",
     "@material-ui/pickers": "^3.2.8",
     "@tinymce/tinymce-react": "^3.3.2",
