--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "3.2.0",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-form": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
