--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.7.0",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "@material-ui/pickers": "^3.2.8",
     "@tinymce/tinymce-react": "^3.3.2",
     "antd": "^3.25.2",
@@ -18,6 +19,7 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
+    "react-easy-crop": "latest",
     "react-notifications": "^1.4.3",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
@@ -26,8 +28,8 @@
     "react-scripts": "3.2.0",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "redux-form": "latest"
+    "redux-form": "latest",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/icons": "^4.9.1",
     "react-datepicker": "^2.10.1"
   }
 }
