--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -10,7 +10,7 @@
     "@tinymce/tinymce-react": "^3.3.2",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.1",
-    "@types/react": "^16.9.23",
+    "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
@@ -24,10 +24,11 @@
     "hyphenated-ru": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "moment": "latest",
+    "node-sass": "^4.13.1",
     "popper.js": "^1.16.0",
-    "react": "^16.11.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.13.1",
     "react-easy-crop": "latest",
     "react-hyphen": "^1.3.0",
     "react-notifications": "^1.4.3",
@@ -41,12 +42,13 @@
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
     "redux-form": "latest",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^3.8.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "start-webpack": "webpack --mode development",
+    "build-webpack": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -67,6 +69,13 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
-    "react-datepicker": "^2.10.1"
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^4.0.2",
+    "react-datepicker": "^2.10.1",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.11"
   }
 }
