--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -2,6 +2,11 @@
   "name": "tech-news-app",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js"
+  },
   "dependencies": {
     "@babel/core": "7.6.0",
     "@date-io/date-fns": "^1.3.13",
@@ -42,6 +47,7 @@
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "3.0.1",
+    "font-awesome": "^4.7.0",
     "fs-extra": "7.0.1",
     "history": "latest",
     "html-react-parser": "^0.10.0",
@@ -95,11 +101,6 @@
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
     "workbox-webpack-plugin": "4.3.1"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
