--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^4.4.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "cross-env": "^7.0.2",
     "css-loader": "2.1.1",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "6.2.0",
@@ -53,6 +54,7 @@
     "html-react-parser": "^0.10.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "hyphenated-ru": "^1.2.0",
+    "iconv-lite": "^0.5.1",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "24.9.0",
@@ -62,6 +64,7 @@
     "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "moment": "latest",
+    "needle": "^2.5.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -88,6 +91,8 @@
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
     "redux-form": "latest",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
