--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -77,6 +77,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dev-utils": "^9.1.0",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-easy-crop": "latest",
     "react-hyphen": "^1.3.0",
