--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
+    "emoji-mart": "^3.0.0",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
