--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <spring-security-version>5.1.6.RELEASE</spring-security-version>
         <spring-core.version>5.1.9.RELEASE</spring-core.version>
         <jjwt.version>0.9.0</jjwt.version>
+        <websocket-api.version>1.1</websocket-api.version>
     </properties>
 
     <parent>
@@ -72,6 +73,12 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>${springframework.data.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>${websocket-api.version}</version>
         </dependency>
 
         <dependency>
@@ -283,6 +290,17 @@
             <version>v3-rev188-1.25.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -295,25 +313,25 @@
                     <target>8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-maven-plugin</artifactId>
-                <version>${liquibasePlugin.version}</version>
-                <configuration>
-                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
-                    <changeLogFile>
-                        ${basedir}/src/main/resources/liquibase/changelogs/db.changelog-master.xml
-                    </changeLogFile>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>update</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.liquibase</groupId>-->
+<!--                <artifactId>liquibase-maven-plugin</artifactId>-->
+<!--                <version>${liquibasePlugin.version}</version>-->
+<!--                <configuration>-->
+<!--                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>-->
+<!--                    <changeLogFile>-->
+<!--                        ${basedir}/src/main/resources/liquibase/changelogs/db.changelog-master.xml-->
+<!--                    </changeLogFile>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <phase>process-resources</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>update</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 </project>
