--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.connection.driver_class = org.postgresql.Driver
 hibernate.connection.url = jdbc:postgresql://localhost:5432/technews
 hibernate.username = postgres
-hibernate.password = 123321
+hibernate.password = momomoqwer12
 hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.hbm2ddl.auto = validate
