--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,4 +1,4 @@
 changeLogFile=liquibase/changelogs/db.changelog-master.xml
 url=jdbc:postgresql://localhost:5432/technews
 username=postgres
-password=123321
+password=momomoqwer12
