--- a/pom.xml
+++ b/pom.xml
@@ -319,25 +319,25 @@
                     <target>8</target>
                 </configuration>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.liquibase</groupId>-->
-<!--                <artifactId>liquibase-maven-plugin</artifactId>-->
-<!--                <version>${liquibasePlugin.version}</version>-->
-<!--                <configuration>-->
-<!--                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>-->
-<!--                    <changeLogFile>-->
-<!--                        ${basedir}/src/main/resources/liquibase/changelogs/db.changelog-master.xml-->
-<!--                    </changeLogFile>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <phase>process-resources</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>update</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>${liquibasePlugin.version}</version>
+                <configuration>
+                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
+                    <changeLogFile>
+                        ${basedir}/src/main/resources/liquibase/changelogs/db.changelog-master.xml
+                    </changeLogFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
