--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -7,6 +7,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
+  "homepage": "./",
   "dependencies": {
     "@babel/core": "7.6.0",
     "@date-io/date-fns": "^1.3.13",
