--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "jest": "jest"
   },
   "homepage": "./",
   "dependencies": {
@@ -56,7 +57,6 @@
     "hyphenated-ru": "^1.2.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
@@ -126,14 +126,17 @@
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
     "awesome-typescript-loader": "^5.2.1",
-    "html-webpack-plugin": "^4.0.2",
     "copy-webpack-plugin": "^6.1.0",
+    "html-webpack-plugin": "^4.0.2",
+    "jest": "^24.9.0",
     "react-datepicker": "^2.10.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "redux-mock-store": "^1.5.4",
+    "fetch-mock": "^9.10.7"
   },
   "jest": {
     "roots": [
