--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -8,7 +8,6 @@
     "test": "node scripts/test.js",
     "jest": "jest"
   },
-  "homepage": "./",
   "dependencies": {
     "@babel/core": "7.6.0",
     "@date-io/date-fns": "^1.3.13",
@@ -100,6 +99,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "styled-components": "^5.2.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
@@ -123,6 +123,9 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
     "awesome-typescript-loader": "^5.2.1",
@@ -136,7 +139,10 @@
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.11",
     "redux-mock-store": "^1.5.4",
-    "fetch-mock": "^9.10.7"
+    "fetch-mock": "^9.10.7",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme": "^3.11.0",
+    "sinon": "^9.0.3"
   },
   "jest": {
     "roots": [
@@ -149,7 +155,9 @@
     "setupFiles": [
       "react-app-polyfill/jsdom"
     ],
-    "setupFilesAfterEnv": [],
+    "setupFilesAfterEnv": [
+      "<rootDir>/config/jest/setupTests.js"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
       "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
