--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -14,64 +14,22 @@
     "@material-ui/core": "^4.9.0",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@material-ui/pickers": "^3.2.8",
-    "@svgr/webpack": "4.3.2",
     "@tinymce/tinymce-react": "^3.3.2",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.1",
-    "@types/react": "^16.9.26",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/redux-form": "^8.2.3",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
     "antd": "^3.25.2",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-react-app": "^9.0.2",
     "bootstrap": "^4.4.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "css-loader": "2.1.1",
     "date-fns": "^2.0.0-beta.5",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "5.1.0",
     "emoji-mart": "^3.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "3.0.1",
     "font-awesome": "^4.7.0",
-    "fs-extra": "7.0.1",
-    "history": "latest",
-    "html-react-parser": "^0.10.0",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "history": "^5.0.0",
     "hyphenated-ru": "^1.2.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.0",
     "jwt-decode": "^2.2.0",
-    "mini-css-extract-plugin": "0.8.0",
     "moment": "latest",
     "needle": "^2.5.0",
-    "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
     "popper.js": "^1.16.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -85,7 +43,6 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-router-redux": "^4.0.8",
     "react-scroll-up-button": "^1.6.4",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
@@ -94,19 +51,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
-    "semver": "6.3.0",
-    "style-loader": "1.0.0",
-    "styled-components": "^5.2.0",
-    "terser-webpack-plugin": "1.4.1",
-    "ts-pnp": "1.1.4",
-    "url-loader": "2.1.0",
-    "webpack": "4.41.0",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.1.1",
-    "workbox-webpack-plugin": "4.3.1"
+    "resolve": "1.12.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -127,22 +72,76 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "pnp-webpack-plugin": "1.5.0",
+    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-resolve": "24.9.0",
+    "jest-watch-typeahead": "0.4.0",
+    "mini-css-extract-plugin": "0.8.0",
+    "fs-extra": "7.0.1",
+    "html-react-parser": "^0.10.0",
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "css-loader": "2.1.1",
+    "dotenv": "6.2.0",
+    "dotenv-expand": "5.1.0",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "8.0.6",
+    "babel-plugin-named-asset-import": "^0.3.4",
+    "babel-preset-react-app": "^9.0.2",
+    "@svgr/webpack": "4.3.2",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.1",
+    "@types/react": "^16.9.26",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/redux-form": "^8.2.3",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
     "@material-ui/icons": "^4.9.1",
     "awesome-typescript-loader": "^5.2.1",
     "copy-webpack-plugin": "^6.1.0",
-    "html-webpack-plugin": "^4.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "eslint": "^7.10.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-webpack-plugin": "^2.1.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-loader": "3.0.2",
+    "eslint-plugin-flowtype": "3.13.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "file-loader": "3.0.1",
+    "fetch-mock": "^9.10.7",
     "jest": "^24.9.0",
     "react-datepicker": "^2.10.1",
+    "redux-mock-store": "^1.5.4",
+    "sinon": "^9.0.3",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.11",
-    "redux-mock-store": "^1.5.4",
-    "fetch-mock": "^9.10.7",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "enzyme": "^3.11.0",
-    "sinon": "^9.0.3"
+    "resolve-url-loader": "3.1.0",
+    "sass-loader": "7.2.0",
+    "semver": "6.3.0",
+    "style-loader": "1.0.0",
+    "styled-components": "^5.2.0",
+    "terser-webpack-plugin": "1.4.1",
+    "ts-pnp": "1.1.4",
+    "url-loader": "2.1.0",
+    "webpack-dev-server": "3.2.1",
+    "webpack-manifest-plugin": "2.1.1",
+    "workbox-webpack-plugin": "4.3.1",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "7.0.1",
+    "postcss-preset-env": "6.7.0",
+    "postcss-safe-parser": "4.0.1"
   },
   "jest": {
     "roots": [
