--- a/client/tech-news-app/package.json
+++ b/client/tech-news-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tech-news-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node scripts/start.js",
@@ -20,7 +20,6 @@
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "hyphenated-ru": "^1.2.0",
-    "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jwt-decode": "^2.2.0",
     "moment": "latest",
@@ -43,11 +42,9 @@
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
     "redux-form": "latest",
-    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "resolve": "1.12.0"
+    "reselect": "^4.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -68,6 +65,8 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "resolve": "1.12.0",
+    "redux-logger": "^3.0.6",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "@babel/core": "7.6.0",
